--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,9 +12,9 @@
   <ion-list class="postList">
     <div  ion-item *ngFor="let post of posts">
     <ion-thumbnail item-left>
-        <img *ngIf="post.featured_image_src && post.featured_image_src['post-thumbnail']" [src]="post.featured_image_src['post-thumbnail']">
-        <img *ngIf="!(post.featured_image_src && post.featured_image_src['post-thumbnail']) && post.featured_image_src_full
-" [src]="post.featured_image_src_full">
+        <img *ngIf="post.better_featured_image && post.better_featured_image['source_url']" [src]="post.better_featured_image['source_url']">
+        <img *ngIf="!(post.better_featured_image && post.better_featured_image['source_url']) && post.better_featured_image
+" [src]="post.better_featured_image">
     </ion-thumbnail>
     <h2 [innerHTML]="post.title.rendered" (click)="postTapped($event, post)"></h2>
     <p *ngIf="post._embedded && post._embedded['wp:term']" style="margin-top: 0.6em">
