--- a/src/pages/wppagedetail/wppagedetail.html
+++ b/src/pages/wppagedetail/wppagedetail.html
@@ -15,6 +15,6 @@
 
 <ion-content padding>
   <ion-item text-wrap>
-          <p [innerHTML]="page.content.rendered | htmlPipe:'change'"></p>
+          <p [innerHTML]="page.content.rendered"></p>
       </ion-item>
 </ion-content>
