--- a/src/pages/postDetail/post-detail.html
+++ b/src/pages/postDetail/post-detail.html
@@ -31,6 +31,15 @@
 
 
  </div>
+ <ion-fab right bottom>
+   <button ion-fab color="dark"><ion-icon name="arrow-dropup"></ion-icon></button>
+       <ion-fab-list side="top">
+         <button ion-fab (click)="shareByEmail()"><ion-icon name="mail"></ion-icon></button>
+         <button ion-fab (click)="shareQQ()"><ion-icon>QQ</ion-icon></button>
+         <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+         <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+       </ion-fab-list>
+   </ion-fab>
 
 </ion-content>
 
