--- a/src/pages/postDetail/post-detail.html
+++ b/src/pages/postDetail/post-detail.html
@@ -36,8 +36,8 @@
        <ion-fab-list side="top">
          <button ion-fab (click)="shareByEmail()"><ion-icon name="mail"></ion-icon></button>
          <button ion-fab (click)="shareQQ()"><ion-icon>QQ</ion-icon></button>
-         <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
-         <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+         <button ion-fab (click)="shareWxTimeLine()"><ion-icon>朋友圈</ion-icon></button>
+         <button ion-fab (click)="shareWxSession()"><ion-icon>微信</ion-icon></button>
        </ion-fab-list>
    </ion-fab>
 
