--- a/src/pages/media-list/media-list.html
+++ b/src/pages/media-list/media-list.html
@@ -44,7 +44,7 @@
 
      </ion-row>
  </div>
- <div [hidden]="isShowSignleUploadView">
+ <div>
    <p>{{errormsg}}</p>
   <img src="{{pathForImage(lastImage)}}" style="width: 100%" [hidden]="lastImage === null">
   <p>上传进度:{{progressValue}}</p>
