--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
       <button ion-button (click)="toggleSearch()"><ion-icon name="search"></ion-icon></button>
       <!-- <button ion-button (click)="openSettings()"><ion-icon name="settings"></ion-icon></button> -->
     </ion-buttons>
-    <ion-title *ngIf="!category">Home page</ion-title>
+    <ion-title *ngIf="!category">华融道咨询</ion-title>
     <ion-title *ngIf="category">{{category.name}}</ion-title>
   </ion-navbar>
 
