--- a/src/pages/setting-page/setting-page.html
+++ b/src/pages/setting-page/setting-page.html
@@ -10,7 +10,7 @@
   	<button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>SettingPage</ion-title>
+    <ion-title>设置</ion-title>
   </ion-navbar>
 
 </ion-header>
