--- a/src/pages/signup-page/signup-page.html
+++ b/src/pages/signup-page/signup-page.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>signupPage</ion-title>
+    <ion-title>注册</ion-title>
   </ion-navbar>
 
 </ion-header>
