--- a/src/pages/wppage/wppage.html
+++ b/src/pages/wppage/wppage.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>wppage</ion-title>
+    <ion-title>页面</ion-title>
   </ion-navbar>
 
 </ion-header>
